<resources>
    <string name="app_name">BookLibrairy</string>
    <string name="edit_message_author">Author :</string>
    <string name="edit_message_title">Tile book :</string>
    <string name="edit_message_isbn">isbn :</string>
    <string name="button_create">ADD Book</string>
    <string name="scan">Scan</string>
    <string name="action_new">New</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="titre">Titre du livre :</string>
    <string name="sorti">Date Publication :</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ajouter">Ajouter</string>
    <string name="action_settings">Settings</string>
    <string name="couverture">couverture</string>
    <string name="ajoutAuteur">Ajouter un Auteur</string>
    <string name="retour">Retour</string>
    <string name="info">Appuyez sur le livre pour prendre en photo la couverture de votre livre.</string>
    <string name="nom_auteur">Auteur(s) :</string>
    <string name="resume">Resume :</string>
    <string name="editeur">editeur :</string>
    <string name="genre">Genre :</string>
    <string name="commentaires">commentaires :</string>
    <string name="Supression">Voulez supprimer ce livre?</string>
</resources>
