<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jordan.booklibrairy.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titre"
        android:text="@string/titre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/ivCouverture"
        android:focusable="false"
 />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sortie"
        android:text="@string/sorti"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/titre"
        android:focusable="false"
  />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resume"
        android:text="@string/resume"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/sortie"
        android:focusable="false"
      />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nom_auteur"
        android:text="@string/nom_auteur"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/resume"
        android:focusable="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajouter"
        android:id="@+id/bajouter"
        android:onClick="onClickAjoutLivre"
        android:layout_marginTop="108dp"
        android:layout_marginLeft="51dp"
        android:layout_marginStart="51dp"
        android:layout_below="@+id/nom_auteur"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retour"
        android:id="@+id/button2"
        android:onClick="onClickRetourAccueil"
        android:layout_marginLeft="47dp"
        android:layout_marginStart="47dp"
        android:layout_alignTop="@+id/bajouter"
        android:layout_toRightOf="@+id/bajouter"
        android:layout_toEndOf="@+id/bajouter" />


    <ImageView

        android:id="@+id/ivCouverture"
        android:contentDescription="@string/couverture"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:scaleType="center"
        android:clickable="true"
        android:onClick="onClickAjoutCouverture"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/titre"
        android:layout_toEndOf="@+id/titre" />


</RelativeLayout>
