<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"

    android:layout_height="wrap_content">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@drawable/biblio"
        tools:context="com.example.jordan.booklibrairy.activity.MainActivity"
        android:focusable="true" android:focusableInTouchMode="true">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titre"
            android:hint="@string/titre"
            android:text=""
            android:textColor="@color/colorblank"

            android:layout_alignBottom="@+id/ivCouverture"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sortie"
            android:hint="@string/sorti"
            android:text=""
            android:textColor="@color/colorblank"
            android:layout_below="@id/titre"

            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nom_auteur"
            android:hint="@string/nom_auteur"
            android:text=""
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/sortie"
            android:textColor="@color/colorblank"

            android:focusable="false" />


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idisbn"
            android:focusable="false"
            android:hint="@string/edit_message_isbn"
            android:text=""
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/nom_auteur"
            android:textColor="@color/colorblank"

            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resume"
            android:hint="@string/resume"
            android:text=""
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/idisbn"
            android:textColor="@color/colorblank"

            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/genres"
            android:hint="@string/genre"
            android:text=""
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/resume"
            android:textColor="@color/colorblank"

             />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/commentaires"
            android:hint="@string/commentaires"
            android:text=""
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/genres"
            android:textColor="@color/colorblank"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editeur"
            android:hint="@string/editeur"
            android:text=""
            android:textColor="@color/colorblank"
            android:layout_below="@+id/commentaires"

            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enregistrer"
            android:id="@+id/EnregistreBook"
            android:layout_below="@+id/editeur"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />







        <ImageView

            android:id="@+id/ivCouverture"
            android:contentDescription="@string/couverture"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:scaleType="center"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/titre"
            android:layout_toEndOf="@+id/titre" />
    </RelativeLayout>
</ScrollView>