<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_book"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jordan.booklibrairy.activity.create_book"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:paddingTop="@dimen/layout_padding_top" >

        <EditText android:id="@+id/edit_message_author"
            android:layout_height="wrap_content"
            android:hint="@string/edit_message_author"
            android:background="@android:color/background_light"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content" />
        <EditText android:id="@+id/edit_message_title"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_message_title"
            android:background="@android:color/background_light"
            android:layout_marginRight="5dp"
            />
        <EditText android:id="@+id/edit_message_isbn"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_message_isbn"
            android:background="@android:color/background_light"
            android:layout_marginRight="5dp"
            />
        <Button
            android:id="@+id/createbook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_create"
            android:onClick="Createbook"
            />

        <Button
            android:layout_marginTop="80dp"
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Retour"
            android:onClick="Back" />

    </LinearLayout>
</LinearLayout>
